Fixed thumb gallery spacing

--- a/src/css/_partial/_post/_thumbnail.scss
+++ b/src/css/_partial/_post/_thumbnail.scss
@@ -35,6 +35,6 @@
     display: inline-block;
     margin: .125rem;
     padding: .50rem;
-    width: 40%;
+    width: 30%;
   }
 }
